# XPlane-AI-ATC

./: .gitignore  README.md  pyproject.toml  test_comma.py
src/ai_atc/: __init__.py  config.py  main.py
src/ai_atc/atc/: __init__.py  controller.py  decision_tree.py  readback.py  state_machine.py
src/ai_atc/flightplan/: __init__.py  flight_plan.py
src/ai_atc/navdata/: __init__.py  airport.py  artcc.py  navigation.py  procedures.py  taxiway.py
src/ai_atc/ui/: gui.py  terminal.py
src/ai_atc/voice/: __init__.py  audio.py  correction.py  llm_agent.py  stt.py  tts.py
src/ai_atc/weather/: __init__.py  metar.py
src/ai_atc/web/: server.py
src/ai_atc/web/static/: app.js  index.html  styles.css
src/ai_atc/xplane/: __init__.py  aircraft.py  connection.py
tests/: test_quick.py  test_stt.py
