[project]
name = "ai-atc"
version = "0.1.0"
description = "AI Air Traffic Controller for X-Plane 11"
requires-python = ">=3.10"
dependencies = [
    "avwx-engine[scipy]>=1.9.0",
    "pyttsx3>=2.90",
    "rich>=13.0",
    "httpx>=0.27",
    "groq>=0.13",
    "ollama",
]

[project.scripts]
ai-atc = "ai_atc.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
